@@ -1,3 +1,10 @@
+2007-08-07  Marius Andreiana <marius.andreiana@gmail.com>
+
+	* src/action.c: (do_action), (voice_control_action_process_result):
+	* src/voice-control.c:
+	
+	New actions implemented: clicks and main menu invocation.
+
 2007-08-04  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>
 
 	* lang/desktop-control.dict:
